[package]
name = "u-siem-datasetmanager-sqlite"
version = "0.0.2"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "Library to be used to build a custom SIEM with the framework uSIEM"
repository = "https://github.com/u-siem/usiem-datasetmanager-sqlite"
keywords = ["SIEM", "security", "logs","sqlite"]
categories = ["security"]
edition = "2018"

[lib]
name = "usiem_dm_sqlite"
path = "src/lib.rs"



[dependencies]
serde = { version = "1.0", features = ["derive"] }
u-siem = {version = "0.0"}
chrono = "0.4"
lazy_static = "1.4.0"
crossbeam-channel = { version = "0.5"}
serde_json = "1.0"
rusqlite = "0.26.1"